fix: rework Header layout (children shift down due to top margin)
Reorder Header children tags and move top margin to the heading child tag; implement conditional rendering of heading and description; implement overflow of {children} and hide the scrollbar

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -6,3 +6,11 @@
   --color-app-dark: #003174;
   --color-app-white: #ffffff;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
